--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.5.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    compile 'cn.yipianfengye.android:zxing-library:2.2'
 }
