--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'cn.yipianfengye.android:zxing-library:2.2'
     compile 'com.github.ome450901:SimpleRatingBar:1.3.6'
+    compile 'com.github.sendtion:XRichText:1.1'
 }
