--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     compile 'cn.yipianfengye.android:zxing-library:2.2'
     compile 'com.github.ome450901:SimpleRatingBar:1.3.6'
     compile 'com.github.sendtion:XRichText:1.1'
+    compile 'com.amap.api:search:latest.integration'
+    compile 'com.amap.api:map2d:latest.integration'
+    compile 'com.amap.api:location:latest.integration'
 }
