--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,8 @@ dependencies {
     compile 'cn.yipianfengye.android:zxing-library:2.2'
     compile 'com.github.ome450901:SimpleRatingBar:1.3.6'
     compile 'com.github.sendtion:XRichText:1.1'
-    compile 'com.amap.api:search:latest.integration'
-    compile 'com.amap.api:map2d:latest.integration'
-    compile 'com.amap.api:location:latest.integration'
+    compile 'com.amap.api:search:5.7.0'
+    compile 'com.amap.api:map2d:5.2.0'
+    compile 'com.amap.api:location:3.7.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
 }
