--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     compile 'com.amap.api:map2d:5.2.0'
     compile 'com.amap.api:location:3.7.0'
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+    //compile 'me.shaohui.shareutil:shareutil:1.3.8'
 }
