--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,10 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -41,6 +45,7 @@ dependencies {
     compile 'com.amap.api:search:5.7.0'
     compile 'com.amap.api:map2d:5.2.0'
     compile 'com.amap.api:location:3.7.0'
+    compile 'com.amap.api:location:latest.integration'
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     //compile 'me.shaohui.shareutil:shareutil:1.3.8'
 }
