--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,13 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     compile 'br.com.simplepass:loading-button-android:1.11.1'
     //compile 'me.shaohui.shareutil:shareutil:1.3.8'
+    // 添加插件
+    apply plugin: 'com.mob.sdk'
+
+    // 在MobSDK的扩展中注册SMSSDK的相关信息
+    MobSDK {
+        appKey "25bf194ee1048"
+        appSecret "150c8ac2833bb6bcb2d117106f67b003"
+        SMSSDK {}
+    }
 }
