--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,18 +25,18 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support:support-v4:27.0.2'
-    compile 'com.android.support:recyclerview-v7:27.0.2'
-    compile 'com.android.support:cardview-v7:27.0.2'
-    compile 'com.android.support:design:27.0.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+    compile 'com.android.support:recyclerview-v7:27.1.1'
+    compile 'com.android.support:cardview-v7:27.1.1'
+    compile 'com.android.support:design:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     compile 'com.alibaba:fastjson:1.2.31'
     compile 'com.ycl.tabview.library:tabviewlibrary:1.0'
-    implementation 'com.github.bumptech.glide:glide:4.5.0'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'cn.yipianfengye.android:zxing-library:2.2'
@@ -44,10 +44,13 @@ dependencies {
     compile 'com.github.sendtion:XRichText:1.1'
     compile 'com.amap.api:search:5.7.0'
     compile 'com.amap.api:map2d:5.2.0'
-    compile 'com.amap.api:location:3.7.0'
-    compile 'com.amap.api:location:3.7.0'
+    compile 'com.amap.api:location:3.8.0'
+    compile 'com.amap.api:location:3.8.0'
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     compile 'br.com.simplepass:loading-button-android:1.11.1'
+    compile 'com.jhworks.library:ImageSelect:1.1.1'
+    compile 'com.contrarywind:Android-PickerView:4.1.3'
+    compile 'com.qianwen:update-app:3.5.1'
     //compile 'me.shaohui.shareutil:shareutil:1.3.8'
     // 添加插件
     apply plugin: 'com.mob.sdk'
