--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.1.3'
         // 注册MobSDK
         classpath 'com.mob.sdk:MobSDK:+'
         // NOTE: Do not place your application dependencies here; they belong
@@ -21,14 +21,13 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        //Bmob的maven仓库地址--必填
+        maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
     }
 }
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-//android {
- //buildToolsVersion '26.0.2'
-//}
 dependencies {
 }
