--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,6 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <!-- 允许联网 -->
-    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- 获取GSM（2g）、WCDMA（联通3g）等网络状态的信息 -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -57,7 +56,9 @@
         <activity android:name=".activity.ReadingActivity" />
         <activity android:name=".activity.SeenActivity" />
         <activity android:name=".activity.AdviceActivity" />
-        <activity android:name=".activity.AboutUsActivity" />
+        <activity android:name=".activity.AboutUsActivity"
+            android:exported="true">
+        </activity>
         <activity android:name=".activity.ScanISBN" />
         <activity android:name=".activity.UserInfoActivity"/>
         <service android:name="com.amap.api.location.APSService" />
