--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,8 +41,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity"/>
-        <activity android:name=".activity.LoginActivity"/>
+        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -56,15 +56,18 @@
         <activity android:name=".activity.ReadingActivity" />
         <activity android:name=".activity.SeenActivity" />
         <activity android:name=".activity.AdviceActivity" />
-        <activity android:name=".activity.AboutUsActivity"
-            android:exported="true">
-        </activity>
+        <activity
+            android:name=".activity.AboutUsActivity"
+            android:exported="true"></activity>
         <activity android:name=".activity.ScanISBN" />
-        <activity android:name=".activity.UserInfoActivity"/>
+        <activity android:name=".activity.UserInfoActivity" />
+
         <service android:name="com.amap.api.location.APSService" />
+
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="914bc3115d9eb1dcddca2317585d71f6" />
+
     </application>
 
 </manifest>
