--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,10 +60,10 @@ dependencies {
     implementation 'com.contrarywind:Android-PickerView:4.1.3'
     implementation 'com.qianwen:update-app:3.5.1'
     //bmob-sdk：Bmob的android sdk包，包含了Bmob的数据存储、文件等服务，以下是最新的bmob-sdk:
-    compile 'cn.bmob.android:bmob-sdk:3.6.3'
+    implementation 'cn.bmob.android:bmob-sdk:3.6.3'
     //bmob-push：Bmob的推送包
     //implementation 'cn.bmob.android:bmob-push:0.8'
 
     //如果你想应用能够兼容Android6.0，请添加此依赖(org.apache.http.legacy.jar)
-    compile 'cn.bmob.android:http-legacy:1.0'
+    implementation 'cn.bmob.android:http-legacy:1.0'
 }
